fix: mobile spacing f-awesome

--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,6 @@
 
 
 .ms-box-icon {
-    width: 30px;
-    height: 30px;
     border-top: 1px solid;
     border-bottom: 1px solid;
     border-left: 1px solid;
